[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.3",
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "openai>=1.60.1",
    "streamlit>=1.41.1",
    "requests>=2.32.3",
    "pypdf2>=3.0.1",
    "together>=1.3.13",
    "python-docx>=1.1.2",
]
